RegressionTests/TestSuiteExport/reject/inline_asm_unknown_condition.blade
// EXPECT: fail
// DIAGNOSTICS: InlineAsmUnknownCondition

fn f() void {
    var x: u32 = 0;
    asm {
        IF_FAKE MOV {x}, {x}
    };
}
